--- a/functor-classes-compat.cabal
+++ b/functor-classes-compat.cabal
@@ -1,6 +1,6 @@
 name:                functor-classes-compat
 version:             1
-x-revision:          3
+x-revision:          4
 synopsis:            Data.Functor.Classes instances for core packages
 description:
   "Data.Functor.Classes" instances for core packages:
@@ -30,7 +30,8 @@ tested-with:
   GHC==8.0.2,
   GHC==8.2.2,
   GHC==8.4.4,
-  GHC==8.6.4
+  GHC==8.6.5,
+  GHC==8.8.1
 
 flag base-transformers-1
   description: Together with base-transformers-1 pick: base >= 4.9, transformers < 0.4, 0.4.*, or >= 0.5. See cabal file for precise assignments.
@@ -72,7 +73,7 @@ library
   default-language:    Haskell2010
   ghc-options: -Wall
 
-  build-depends:  hashable >=1.0.1.1 && <1.3
+  build-depends:  hashable >=1.0.1.1 && <1.4
 
   -- base and transformer dependencies:
   -- t t: base >= 4.9
