--- a/functor-classes-compat.cabal
+++ b/functor-classes-compat.cabal
@@ -1,15 +1,14 @@
 name:               functor-classes-compat
-version:            1.0.1
-x-revision:         1
+version:            2
 synopsis:           Data.Functor.Classes instances for core packages
 description:
   "Data.Functor.Classes" instances for core packages:
   .
   * containers
   .
-  * vector
-  .
-  * unordered-containers
+  This package used to provide instances for @unordered-containers@
+  and @vector@, but  these packages are since been upgraded.
+  Use @unordered-containers >=0.2.8.0@ and @vector >=0.12@.
 
 homepage:           https://github.com/phadej/functor-classes-compat#readme
 bug-reports:        https://github.com/phadej/functor-classes-compat/issues
@@ -48,18 +47,8 @@ flag base-transformers-2
   manual:      False
   default:     True
 
-flag vector
-  description: 'vector >= 0.12'
-  manual:      False
-  default:     True
-
 flag containers
   description: 'containers >= 0.5.9.1'
-  manual:      False
-  default:     True
-
-flag unordered-containers
-  description: 'unordered-containers >= 0.2.8.0'
   manual:      False
   default:     True
 
@@ -74,13 +63,9 @@ library
     Data.IntMap.Functor.Classes
     Data.Sequence.Functor.Classes
     Data.Tree.Functor.Classes
-    Data.Vector.Functor.Classes
-    Data.HashSet.Functor.Classes
-    Data.HashMap.Functor.Classes
 
   default-language: Haskell2010
   ghc-options:      -Wall
-  build-depends:    hashable >=1.0.1.1 && <1.4
 
   -- base and transformer dependencies:
   -- t t: base >= 4.9
@@ -105,7 +90,7 @@ library
       build-depends:
           base                 >=4.5 && <4.9
         , transformers         >=0   && <0.4
-        , transformers-compat  >=0.5 && <0.7
+        , transformers-compat  >=0.5 && <0.8
 
     else
       build-depends:
@@ -134,49 +119,3 @@ library
 
     else
       hs-source-dirs: src-explicit/containers
-
-  -- unordered-containers
-  if flag(unordered-containers)
-    build-depends: unordered-containers >=0.2.8.0 && <0.3
-
-    if (flag(base-transformers-1) && flag(base-transformers-2))
-      hs-source-dirs: src-none/unordered-containers
-
-    else
-      if (!flag(base-transformers-1) && !flag(base-transformers-2))
-        hs-source-dirs: src-implicit/unordered-containers
-
-      else
-        hs-source-dirs: src-explicit/unordered-containers
-
-  else
-    build-depends: unordered-containers >=0.2.7.1 && <0.2.8.0
-
-    if (!flag(base-transformers-1) && !flag(base-transformers-2))
-      hs-source-dirs: src-implicit/unordered-containers
-
-    else
-      hs-source-dirs: src-explicit/unordered-containers
-
-  -- vector
-  if flag(vector)
-    build-depends: vector ==0.12.*
-
-    if (flag(base-transformers-1) && flag(base-transformers-2))
-      hs-source-dirs: src-none/vector
-
-    else
-      if (!flag(base-transformers-1) && !flag(base-transformers-2))
-        hs-source-dirs: src-implicit/vector
-
-      else
-        hs-source-dirs: src-explicit/vector
-
-  else
-    build-depends: vector >=0.11.0.0 && <0.12
-
-    if (!flag(base-transformers-1) && !flag(base-transformers-2))
-      hs-source-dirs: src-implicit/vector
-
-    else
-      hs-source-dirs: src-explicit/vector
