--- a/.github/workflows/haskell-ci.yml
+++ b/.github/workflows/haskell-ci.yml
@@ -8,9 +8,9 @@
 #
 # For more information, see https://github.com/haskell-CI/haskell-ci
 #
-# version: 0.13.20211114
+# version: 0.13.20211116
 #
-# REGENDATA ("0.13.20211114",["github","cabal.project"])
+# REGENDATA ("0.13.20211116",["github","cabal.project"])
 #
 name: Haskell-CI
 on:
@@ -259,6 +259,14 @@ jobs:
       - name: prepare for constraint sets
         run: |
           rm -f cabal.project.local
+      - name: constraint set transformers-0.6
+        run: |
+          $CABAL v2-build $ARG_COMPILER --disable-tests --disable-benchmarks --constraint='transformers ==0.6.*' --dependencies-only -j2 all
+          $CABAL v2-build $ARG_COMPILER --disable-tests --disable-benchmarks --constraint='transformers ==0.6.*' all
+      - name: constraint set transformers-0.5
+        run: |
+          $CABAL v2-build $ARG_COMPILER --disable-tests --disable-benchmarks --constraint='transformers ==0.5.*' --dependencies-only -j2 all
+          $CABAL v2-build $ARG_COMPILER --disable-tests --disable-benchmarks --constraint='transformers ==0.5.*' all
       - name: constraint set transformers-0.4
         run: |
           if [ $((HCNUMVER < 70800)) -ne 0 ] ; then $CABAL v2-build $ARG_COMPILER --disable-tests --disable-benchmarks --constraint='transformers ==0.4.*' --dependencies-only -j2 all ; fi
